--- a/client/src/components/styles/home.css
+++ b/client/src/components/styles/home.css
@@ -1,4 +1,21 @@
 .welcome{
     text-align: right;
-    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.home-wrapper{
+    margin-top: 30px;
+    text-align: center;
+}
+
+.blurb{
+    line-height: 180%;
+    background-color: rgba(253, 232, 137, 0.863);
+    padding: 20px 6em;
+    width: 100vw;
+    margin-bottom: 60px;
+}
+
+.main-wrapper{
+    margin: 30px 4em;
 }
