--- a/client/src/components/styles/account.css
+++ b/client/src/components/styles/account.css
@@ -1,11 +1,66 @@
-.wrapper {
-    display: flex;
+.account-wrapper {
+    position: relative;
+    /* display: flex; */
+    /* margin-top: 20px; */
+    /* justify-content: space-between; */
+    align-items: right;
+}
+
+*{
+	margin: 0;
+	box-sizing: border-box;
+	list-style: none;
+	font-family: arial;
+}
+body{
+	background: #f3f5f9;
+}
+
+.sidebar{
+	position: fixed;
+	width: 200px;
+	height: 100%;
+	background: #0d0d0ee0;
+    /* margin-top: 40px; */
+	padding-top: 40px;
+}
+.text-muted{
+	color: #adb5bd!important;
+    margin: 30px;
+}
+
+.list{
+    padding: 0;
+    margin-top: 10px;
+}
+
+.sidebar ul li{
+	padding: 15px;	
+}
+
+.sidebar ul li{
+	color: #fff;
+	display: block;
+    text-decoration: none;
+    padding-left: 15px;
+}
+
+.sidebar ul li:hover{
+	background: rgb(10, 10, 11);
+}
+
+.account-body{
+    padding: 40px 4em 0 250px;
+}
+
+.account-subbody{
+    padding: 0 4em 0 250px;
 }
 
 .logout {
-    position: relative;
-    background-color: rgb(206, 65, 0);
+    background-color: rgb(193, 62, 1);
     color: white;
-    justify-content: space-between;
-    align-items: right;
+    margin-left: 50px;
+    position: fixed;
+    bottom: 80px;
 }
