--- a/client/src/components/styles/post.css
+++ b/client/src/components/styles/post.css
@@ -3,10 +3,11 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 100px;
+    padding: 20px 4em;
 }
 
 .pagename {
-    margin: 40px 0 20px;
+    margin: 40px 0 40px;
 }
 
 .label {
