--- a/client/src/components/styles/details.css
+++ b/client/src/components/styles/details.css
@@ -9,7 +9,7 @@
 }
 
 #review-wrapper {
-    margin-top: 40px;
+    margin-top: 30px;
 }
 
 #form {
@@ -25,7 +25,7 @@
 }
 
 .line {
-    margin: 40px auto;
+    margin: 20px auto 40px;
     max-width: 1200px;
     border-bottom: 1px solid rgb(199, 199, 199);
 }
