--- a/client/src/components/styles/details.css
+++ b/client/src/components/styles/details.css
@@ -5,7 +5,7 @@
 #wrapper {
     align-self: center;
     margin: 40px auto;
-    max-width: 1200px;
+    max-width: 1000px;
 }
 
 #review-wrapper {
@@ -18,6 +18,7 @@
 
 #comments-wrapper {
     margin-top: 20px;
+    max-width: 1000px;
 }
 
 #comments {
@@ -26,6 +27,20 @@
 
 .line {
     margin: 20px auto 40px;
-    max-width: 1200px;
+    max-width: 1000px;
     border-bottom: 1px solid rgb(199, 199, 199);
+}
+
+.form-control{
+    white-space: pre-wrap;
+}
+
+.review_image{
+    width: 100%;
+    max-width: 1000px;
+    margin: 20px auto;
+}
+
+.review_desc{
+    margin: 20px auto 40px;
 }
