--- a/client/src/components/styles/details.css
+++ b/client/src/components/styles/details.css
@@ -6,10 +6,16 @@
     align-self: center;
     margin: 40px auto;
     max-width: 1000px;
+    box-shadow: 3px 3px 9px rgba(194, 199, 214, 0.459);
+    border-radius: 25px;
 }
 
 #review-wrapper {
     margin-top: 30px;
+}
+
+.review-wrapper{
+    margin-top: 20px;
 }
 
 #form {
@@ -22,12 +28,12 @@
 }
 
 #comments {
-    margin-top: 20px;
+    margin: 20px 0 40px;
 }
 
 .line {
-    margin: 20px auto 40px;
-    max-width: 1000px;
+    /* margin: 20px auto 40px; */
+    max-width: 100%;
     border-bottom: 1px solid rgb(199, 199, 199);
 }
 
@@ -36,9 +42,10 @@
 }
 
 .review_image{
-    width: 100%;
-    max-width: 1000px;
+    width: auto;
+    max-width: 100%;
     margin: 20px auto;
+    max-height: 700px;
 }
 
 .review_desc{
